<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BluetoothErrorActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity = "center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/BTError1"/>
    <Button
        android:id="@+id/btnBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity = "center_horizontal"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/BTButton1"/>
    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/BTButton2"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>