<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textAllCaps="false"
        android:typeface="serif"
        android:textColor="@color/colorAccent"
        android:shadowColor="@color/colorAccentDark"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        android:text="@string/Name"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/addProfile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
    <EditText
        android:id="@+id/addControllerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/NameExt" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textAllCaps="false"
        android:typeface="serif"
        android:textColor="@color/colorAccent"
        android:shadowColor="@color/colorAccentDark"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        android:text="@string/Size"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>
    <!--
    <com.marcinmoskala.arcseekbar.ArcSeekBar
        android:id="@+id/sizeSeek"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:progressBackgroundColor="@color/colorAccent"
        app:progressBackgroundWidth="20dp"
        app:progress="100"
        app:progressWidth="20dp"
        app:roundEdges="true" />
    -->
    <SeekBar
        android:id="@+id/sizeSeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="400"
        android:progress="10"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAllCaps="false"
        android:typeface="serif"
        android:textColor="@color/colorAccent"
        android:shadowColor="@color/colorAccentDark"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        android:text="@string/Type"
        android:gravity="center_horizontal"
        android:textSize="20sp"/>
    <Spinner
        android:id="@+id/listOfType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>
</LinearLayout>